# darktide-plugin-discord

./: .gitignore  .renovaterc  API_COMPARISON.md  BUILD_WITH_ZIG.md  CONVERSION_SUMMARY.md  Cargo.toml  Dockerfile  Justfile  MIGRATION_COMPLETE.md  Makefile  README.adoc  README.md  SUMMARY.md  build.zig  build.zig.zon
.github/workflows/: copilot-setup-steps.yml
discord_game_sdk/c/: Windows.h  dxgi.h
src/: PluginApi128.h  darktide_discord.cpp  darktide_discord.zig  lib.rs  main.zig  plugin.rs  root.zig  stingray_sdk.rs
src/discord/: Windows.h
